# rules_ros2

./: MODULE.bazel
repositories/: diagnostics.BUILD.bazel  geometry2.BUILD.bazel  repositories.bzl  rmw_implementation.BUILD.bazel  ros2_repo_mappings.yaml  ros2_repositories_impl.bzl  rosbag2.BUILD.bazel  rosidl.BUILD.bazel  rosidl_dynamic_typesupport.BUILD.bazel  rosidl_typesupport.BUILD.bazel
repositories/patches/: rclcpp-fix-gcc12-Wmaybe-uninitialized.patch  rosidl_python_fix_imports.patch
ros2/: interfaces.bzl
